--- a/Task1/Task1.6/index.html
+++ b/Task1/Task1.6/index.html
@@ -1,12 +1,13 @@
-//Task 6: Variable Behavior Program   
+<!--Task 6: Variable Behavior Program   
 //Declare one variable using var. 
 //Declare one variable using let. 
 //Declare one variable using const. 
 //Attempt to reassign values to each variable. 
 //Attempt redeclaration where applicable. 
 //Log the results to the console. 
-//Add comments explaining the observed behavior.
+//Add comments explaining the observed behavior.-->
 
+<script>
 // Declaring variables
 var x = 10;       // var declaration
 let y = 20;       // let declaration
@@ -34,3 +35,4 @@ var x = 50;       // Allowed (var allows redeclaration)
 
 console.log("After redeclaration:");
 console.log("var x =", x);
+</script>
