--- a/Task1/Task1.2/index.html
+++ b/Task1/Task1.2/index.html
@@ -1,12 +1,23 @@
-//Task 2: Arithmetic Operations Program.
-// Create two numeric variables.
-// Perform the following operations:addition, subtraction, multiplication, division, modulus,power.
-// Store each operation result in a separate variable.
-// Log each result to the console with a meaningful description.
- 
-const prompt=require("prompt-sync")();
-let num1 = Number(prompt("Enter the first number:"));
-let num2 = Number(prompt("Enter the second number:"));
+<!--Task 2: Arithmetic Operations Program.
+ Create two numeric variables.
+ Perform the following operations:addition, subtraction, multiplication, division, modulus,power.
+ Store each operation result in a separate variable.
+Log each result to the console with a meaningful description.-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+
+<script>
+
+let num1 = 8;
+let num2 = 2;
 
 // Arithmetic Operations
 let addition = num1 + num2;
@@ -24,4 +35,7 @@ console.log(`Multiplication (${num1} * ${num2}):`, multiplication);
 console.log(`Division (${num1} / ${num2}):`, division);
 console.log(`Modulus(${num1} % ${num2}):`, modulus);
 console.log(`Power (${num1} ^${num2}):`, power);
+ </script>
+ </html>
+
 
