--- a/Task3/Task3.2/index.html
+++ b/Task3/Task3.2/index.html
@@ -38,6 +38,7 @@ b. Modifies two or more properties of the object.
     console.log("Age:"+userProfile.age);
     console.log("Email:"+userProfile.email);
     console.log("Active:"+userProfile.isActive);
+    console.log(userProfile);
     
     let result=updateProfile(userProfile);
     console.log("After Modifiyng:\n");
