--- a/Task3/Task3.5/index.html
+++ b/Task3/Task3.5/index.html
@@ -9,6 +9,7 @@ b. Update at least one property of the object.
 3. Log the updated property values from inside the method. 
 4. Call the method and confirm that the object’s data has changed. 
 5. Log the final object state to the console. -->
+<h1> Object Methods</h1>
 <script>
     let userProfile={
         name:'Suji',
