--- a/Task3/Task3.3/index.html
+++ b/Task3/Task3.3/index.html
@@ -7,6 +7,17 @@ b. Each item must have name, price, and quantity.
 3. Calculate the total price using object values only (no hardcoded numbers). 
 4. Log the final total price to the console with a clear message. 
 5. Ensure the solution works if item values change.-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Nested Shopping Cart Object</title>
+</head>
+<body>
+    <h1> Nested Shopping Cart Object</h1>
+</body>
+</html>
 <script>
     let cart={
         items:[
